--- a/src/index.css
+++ b/src/index.css
@@ -34,17 +34,21 @@ nav ul {
   flex-direction: column;
   justify-content: center;
   padding-left: 0;
+  width: inherit;
 }
 
 nav li {
   list-style: none;
   margin-bottom: 10px;
+  width: inherit;
 }
 
 nav li a {
+  display: block;
   color: white;
   font-size: 1.2rem;
   text-decoration: none;
+  width: 100%;
 }
 
 nav a.active{
